Move vendored files for the web client to a separate folder

--- a/Resources/index.html
+++ b/Resources/index.html
@@ -5,7 +5,7 @@
 		<title>Catena</title>
 		<meta charset="UTF-8">
 		<link rel="stylesheet" type="text/css" href="default.css" />
-		<link rel="stylesheet" href="lib/css/font-awesome.min.css" />
+		<link rel="stylesheet" href="vendor/css/font-awesome.min.css" />
 	</head>
 
 	<body>
@@ -244,8 +244,8 @@
 			</div>
 		</template>
 
-		<script type="text/javascript" src="lib/js/vue.js"></script>
-		<script type="text/javascript" src="lib/js/vue-resource.js"></script>
+		<script type="text/javascript" src="vendor/js/vue.js"></script>
+		<script type="text/javascript" src="vendor/js/vue-resource.js"></script>
 		<script type="text/javascript" src="catena.js"></script>
 	</body>
 </html>
