--- a/Resources/index.html
+++ b/Resources/index.html
@@ -4,6 +4,7 @@
 	<head>
 		<title>Catena</title>
 		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" type="text/css" href="default.css" />
 		<link rel="stylesheet" href="vendor/css/font-awesome.min.css" />
 	</head>
