Add logo to web client and README

--- a/Resources/index.html
+++ b/Resources/index.html
@@ -5,7 +5,7 @@
 		<title>Catena</title>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" type="text/css" href="default.css" />
+		<link rel="stylesheet" type="text/css" href="static/default.css" />
 		<link rel="stylesheet" href="vendor/css/font-awesome.min.css" />
 	</head>
 
